--- a/index.html
+++ b/index.html
@@ -8,17 +8,15 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <!-- logo and background image -->
     <header>
-        <!-- logo and background image -->
-        <div>
-
-        </div>
+        <img id="logo" src="img/logo.svg" alt="logo">
+    </header>
+    <main>
         <!-- article title and info -->
         <section>
 
         </section>
-    </header>
-    <main>
          <!-- images and description -->
         <section> 
 
