section title + css

--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
     </header>
     <main>
         <!-- article title and info -->
-        <section>
-
+        <section id="title">
+            <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
+            <h4>Scritto da <strong>The Booleaner</strong></h4>
+            <p class="small">il 10/10/2020</p> 
         </section>
          <!-- images and description -->
         <section> 
