--- a/index.html
+++ b/index.html
@@ -20,8 +20,13 @@
             <p class="small">il 10/10/2020</p> 
         </section>
          <!-- images and description -->
-        <section> 
-
+        <section id="images"> 
+            <img src="img/tim-1.jpg" alt="tim-1">
+            <img src="img/tim-2.jpg" alt="tim-2">
+            <p>
+                1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen <br>
+                2nd Photo: Wikimedia, by Paul Clarke
+            </p>
         </section>
         <!-- paragraph -->
         <section>
