added section paragraph, correcting overall px dimension

--- a/index.html
+++ b/index.html
@@ -16,21 +16,21 @@
         <!-- article title and info -->
         <section id="title">
             <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
-            <h4>Scritto da <strong>The Booleaner</strong></h4>
+            <h4>Scritto da <span id="thebooleaner">The Booleaner</span></h4>
             <p class="small">il 10/10/2020</p> 
         </section>
          <!-- images and description -->
         <section id="images"> 
-            <img src="img/tim-1.jpg" alt="tim-1">
-            <img src="img/tim-2.jpg" alt="tim-2">
+            <img id="tim1" src="img/tim-1.jpg" alt="tim-1">
+            <img id="tim2" src="img/tim-2.jpg" alt="tim-2">
             <p>
                 1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen <br>
                 2nd Photo: Wikimedia, by Paul Clarke
             </p>
         </section>
-        <!-- paragraph -->
-        <section>
-
+        <!-- paragraph 1-->
+        <section class="paragraph_1">
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod quas distinctio esse velit nisi voluptates dolores, ex dolorum, <span id="yellowmark">laudantium ipsum maxime amet. Ipsum eveniet ab reprehenderit aperiam ipsam, illo totam! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veniam voluptatum sequi ex qui</span> cum totam iste explicabo id ullam numquam? Ipsam distinctio maxime, quod quidem eveniet suscipit officia? Accusamus, explicabo. Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque velit earum officia nostrum blanditiis iusto ut ratione ab pariatur voluptatum! Mollitia autem itaque maxime ipsa voluptatibus obcaecati officia ipsum dignissimos! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae ducimus eligendi quibusdam exercitationem consectetur velit voluptatibus enim architecto rem fugiat officiis voluptas odio alias, cumque animi ex rerum quasi in. Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero aperiam sed reprehenderit tempore porro eos aliquid at autem vel. Omnis deserunt reprehenderit facilis voluptate. Voluptatem aliquid repudiandae sapiente velit iusto.</p>
         </section>
         <!-- list -->
         <section>
