added section list

--- a/index.html
+++ b/index.html
@@ -33,8 +33,12 @@
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod quas distinctio esse velit nisi voluptates dolores, ex dolorum, <span id="yellowmark">laudantium ipsum maxime amet. Ipsum eveniet ab reprehenderit aperiam ipsam, illo totam! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veniam voluptatum sequi ex qui</span> cum totam iste explicabo id ullam numquam? Ipsam distinctio maxime, quod quidem eveniet suscipit officia? Accusamus, explicabo. Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque velit earum officia nostrum blanditiis iusto ut ratione ab pariatur voluptatum! Mollitia autem itaque maxime ipsa voluptatibus obcaecati officia ipsum dignissimos! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae ducimus eligendi quibusdam exercitationem consectetur velit voluptatibus enim architecto rem fugiat officiis voluptas odio alias, cumque animi ex rerum quasi in. Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero aperiam sed reprehenderit tempore porro eos aliquid at autem vel. Omnis deserunt reprehenderit facilis voluptate. Voluptatem aliquid repudiandae sapiente velit iusto.</p>
         </section>
         <!-- list -->
-        <section>
-
+        <section class="list">
+            <ul>
+                <li> Lorem ipsum necessitatibus dignissimos maiores tempore id totam, velit itaque enim odio soluta at. A iure modi esse harum reiciendis.</li>
+                <li> Lorem ipsum. Eos, totam accusantium, suscipit debitis alias sequi, commodi tempore quisquam quas aspernatur soluta!</li>
+                <li> Lorem ipsum, labore fugiat dolores facere quisquam incidunt asperiores cupiditate iste qui error distinctio hic ipsa aliquid sint non.</li>
+            </ul>
         </section>
         <!-- table -->
         <table>
