added table and paragraph 2 section, css colors

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </section>
         <!-- paragraph 1-->
         <section class="paragraph_1">
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod quas distinctio esse velit nisi voluptates dolores, ex dolorum, <span id="yellowmark">laudantium ipsum maxime amet. Ipsum eveniet ab reprehenderit aperiam ipsam, illo totam! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veniam voluptatum sequi ex qui</span> cum totam iste explicabo id ullam numquam? Ipsam distinctio maxime, quod quidem eveniet suscipit officia? Accusamus, explicabo. Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque velit earum officia nostrum blanditiis iusto ut ratione ab pariatur voluptatum! Mollitia autem itaque maxime ipsa voluptatibus obcaecati officia ipsum dignissimos! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae ducimus eligendi quibusdam exercitationem consectetur velit voluptatibus enim architecto rem fugiat officiis voluptas odio alias, cumque animi ex rerum quasi in. Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero aperiam sed reprehenderit tempore porro eos aliquid at autem vel. Omnis deserunt reprehenderit facilis voluptate. Voluptatem aliquid repudiandae sapiente velit iusto.</p>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod quas distinctio esse velit nisi voluptates dolores, ex dolorum, <span class="yellowmark">laudantium ipsum maxime amet. Ipsum eveniet ab reprehenderit aperiam ipsam, illo totam! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veniam voluptatum sequi ex qui</span> cum totam iste explicabo id ullam numquam? Ipsam distinctio maxime, quod quidem eveniet suscipit officia? Accusamus, explicabo. Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque velit earum officia nostrum blanditiis iusto ut ratione ab pariatur voluptatum! Mollitia autem itaque maxime ipsa voluptatibus obcaecati officia ipsum dignissimos! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae ducimus eligendi quibusdam exercitationem consectetur velit voluptatibus enim architecto rem fugiat officiis voluptas odio alias, cumque animi ex rerum quasi in. Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero aperiam sed reprehenderit tempore porro eos aliquid at autem vel. Omnis deserunt reprehenderit facilis voluptate. Voluptatem aliquid repudiandae sapiente velit iusto.</p>
         </section>
         <!-- list -->
         <section class="list">
@@ -42,11 +42,37 @@
         </section>
         <!-- table -->
         <table>
-
+            <thead>
+                <tr>
+                    <th>Lorem ipsum dolor</th>
+                    <th>Lorem ipsum dolor</th>
+                    <th>Lorem ipsum dolor</th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr class="tr_odd">
+                    <td>Lorem ipsum dolor</td>
+                    <td>Lorem ipsum dolor</td>
+                    <td colspan="2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi quibusdam illo voluptates sint possimus mollitia quam ut beatae veritatis rerum sed dolorem fugit accusantium optio, reprehenderit sunt ex atque doloremque?</td>
+                </tr>
+                <tr class="tr_even">
+                    <td>Lorem ipsum dolor</td>
+                    <td>Lorem ipsum dolor</td>
+                    <td colspan="2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet sequi ratione numquam eaque vitae accusantium quis perspiciatis cum autem optio dolore animi, voluptate delectus suscipit! Illum cumque illo ullam nesciunt!</td>
+                </tr>
+                <tr class="tr_odd">
+                    <td>Lorem ipsum dolor</td>
+                    <td>Lorem ipsum dolor</td>
+                    <td colspan="2">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus tenetur repudiandae, dolorum delectus amet rerum alias aperiam ex. Facere harum ipsum vero quae aspernatur, atque sed neque voluptate veritatis minus!</td>
+                </tr>
+            </tbody>
         </table>
         <!-- paragraph 2 -->
         <section>
-
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus accusamus, commodi itaque deserunt doloremque <span class="yellowmark">eos error sed earum consequuntur exercitationem. Vero deleniti maiores autem impedit! Aut magnam excepturi nulla natus?Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis alias odit recusandae deserunt</span> aspernatur animi nostrum, fugit adipisci neque non eaque rem harum nemo amet modi! Expedita temporibus enim ea!Lorem
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ea, eveniet temporibus aperiam laboriosam suscipit, iure nobis vero ullam eligendi maxime nemo tempora totam earum laborum doloremque labore, facilis quam vel!
+            </p>
         </section>
     </main>
     <footer>
