--- a/index.html
+++ b/index.html
@@ -77,9 +77,11 @@
     </main>
     <footer>
         <!-- related searches -->
-
-        <div></div>
-        <div></div>
+        <h4>Potrebbero interessarti</h4>
+        <div id="related_searches">
+            <img src="img/monitor.jpg" alt="monitor"><br>
+            <img src="img/graph.jpg" alt="graph">
+        </div>
     </footer>
 </body>
 </html>
