added bonus exercise, margin left and right for main and footer

--- a/index.html
+++ b/index.html
@@ -5,83 +5,86 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Booleaner</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/master.css">
 </head>
 <body>
     <!-- logo and background image -->
     <header>
         <img id="logo" src="img/logo.svg" alt="logo">
     </header>
-    <main>
-        <!-- article title and info -->
-        <section id="title">
-            <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
-            <h4>Scritto da <span id="thebooleaner">The Booleaner</span></h4>
-            <p class="small">il 10/10/2020</p> 
-        </section>
-         <!-- images and description -->
-        <section id="images"> 
-            <img id="tim1" src="img/tim-1.jpg" alt="tim-1">
-            <img id="tim2" src="img/tim-2.jpg" alt="tim-2">
-            <p>
-                1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen <br>
-                2nd Photo: Wikimedia, by Paul Clarke
-            </p>
-        </section>
-        <!-- paragraph 1-->
-        <section class="paragraph_1">
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod quas distinctio esse velit nisi voluptates dolores, ex dolorum, <span class="yellowmark">laudantium ipsum maxime amet. Ipsum eveniet ab reprehenderit aperiam ipsam, illo totam! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veniam voluptatum sequi ex qui</span> cum totam iste explicabo id ullam numquam? Ipsam distinctio maxime, quod quidem eveniet suscipit officia? Accusamus, explicabo. Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque velit earum officia nostrum blanditiis iusto ut ratione ab pariatur voluptatum! Mollitia autem itaque maxime ipsa voluptatibus obcaecati officia ipsum dignissimos! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae ducimus eligendi quibusdam exercitationem consectetur velit voluptatibus enim architecto rem fugiat officiis voluptas odio alias, cumque animi ex rerum quasi in. Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero aperiam sed reprehenderit tempore porro eos aliquid at autem vel. Omnis deserunt reprehenderit facilis voluptate. Voluptatem aliquid repudiandae sapiente velit iusto.</p>
-        </section>
-        <!-- list -->
-        <section class="list">
-            <ul>
-                <li> Lorem ipsum necessitatibus dignissimos maiores tempore id totam, velit itaque enim odio soluta at. A iure modi esse harum reiciendis.</li>
-                <li> Lorem ipsum. Eos, totam accusantium, suscipit debitis alias sequi, commodi tempore quisquam quas aspernatur soluta!</li>
-                <li> Lorem ipsum, labore fugiat dolores facere quisquam incidunt asperiores cupiditate iste qui error distinctio hic ipsa aliquid sint non.</li>
-            </ul>
-        </section>
-        <!-- table -->
-        <table>
-            <thead>
-                <tr>
-                    <th>Lorem ipsum dolor</th>
-                    <th>Lorem ipsum dolor</th>
-                    <th>Lorem ipsum dolor</th>
-                    <th></th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr class="tr_odd">
-                    <td>Lorem ipsum dolor</td>
-                    <td>Lorem ipsum dolor</td>
-                    <td colspan="2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi quibusdam illo voluptates sint possimus mollitia quam ut beatae veritatis rerum sed dolorem fugit accusantium optio, reprehenderit sunt ex atque doloremque?</td>
-                </tr>
-                <tr class="tr_even">
-                    <td>Lorem ipsum dolor</td>
-                    <td>Lorem ipsum dolor</td>
-                    <td colspan="2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet sequi ratione numquam eaque vitae accusantium quis perspiciatis cum autem optio dolore animi, voluptate delectus suscipit! Illum cumque illo ullam nesciunt!</td>
-                </tr>
-                <tr class="tr_odd">
-                    <td>Lorem ipsum dolor</td>
-                    <td>Lorem ipsum dolor</td>
-                    <td colspan="2">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus tenetur repudiandae, dolorum delectus amet rerum alias aperiam ex. Facere harum ipsum vero quae aspernatur, atque sed neque voluptate veritatis minus!</td>
-                </tr>
-            </tbody>
-        </table>
-        <!-- paragraph 2 -->
-        <section>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus accusamus, commodi itaque deserunt doloremque <span class="yellowmark">eos error sed earum consequuntur exercitationem. Vero deleniti maiores autem impedit! Aut magnam excepturi nulla natus?Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis alias odit recusandae deserunt</span> aspernatur animi nostrum, fugit adipisci neque non eaque rem harum nemo amet modi! Expedita temporibus enim ea!Lorem
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ea, eveniet temporibus aperiam laboriosam suscipit, iure nobis vero ullam eligendi maxime nemo tempora totam earum laborum doloremque labore, facilis quam vel!
-            </p>
-        </section>
-    </main>
-    <footer>
+
+    <div id="container">
+        <main>
+            <!-- article title and info -->
+            <section id="title">
+                <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
+                <h4>Scritto da <span id="thebooleaner">The Booleaner</span></h4>
+                <p class="small">il 10/10/2020</p> 
+            </section>
+            <!-- images and description -->
+            <section id="images"> 
+                <img id="tim1" src="img/tim-1.jpg" alt="tim-1">
+                <img id="tim2" src="img/tim-2.jpg" alt="tim-2">
+                <p>
+                    1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen <br>
+                    2nd Photo: Wikimedia, by Paul Clarke
+                </p>
+            </section>
+            <!-- paragraph 1-->
+            <section class="paragraph_1">
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod quas distinctio esse velit nisi voluptates dolores, ex dolorum, <span class="yellowmark">laudantium ipsum maxime amet. Ipsum eveniet ab reprehenderit aperiam ipsam, illo totam! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veniam voluptatum sequi ex qui</span> cum totam iste explicabo id ullam numquam? Ipsam distinctio maxime, quod quidem eveniet suscipit officia? Accusamus, explicabo. Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque velit earum officia nostrum blanditiis iusto ut ratione ab pariatur voluptatum! Mollitia autem itaque maxime ipsa voluptatibus obcaecati officia ipsum dignissimos! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae ducimus eligendi quibusdam exercitationem consectetur velit voluptatibus enim architecto rem fugiat officiis voluptas odio alias, cumque animi ex rerum quasi in. Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero aperiam sed reprehenderit tempore porro eos aliquid at autem vel. Omnis deserunt reprehenderit facilis voluptate. Voluptatem aliquid repudiandae sapiente velit iusto.</p>
+            </section>
+            <!-- list -->
+            <section class="list">
+                <ul>
+                    <li> Lorem ipsum necessitatibus dignissimos maiores tempore id totam, velit itaque enim odio soluta at. A iure modi esse harum reiciendis.</li>
+                    <li> Lorem ipsum. Eos, totam accusantium, suscipit debitis alias sequi, commodi tempore quisquam quas aspernatur soluta!</li>
+                    <li> Lorem ipsum, labore fugiat dolores facere quisquam incidunt asperiores cupiditate iste qui error distinctio hic ipsa aliquid sint non.</li>
+                </ul>
+            </section>
+            <!-- table -->
+            <table>
+                <thead>
+                    <tr>
+                        <th>Lorem ipsum dolor</th>
+                        <th>Lorem ipsum dolor</th>
+                        <th>Lorem ipsum dolor</th>
+                        <th></th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr class="tr_odd">
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor</td>
+                        <td colspan="2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi quibusdam illo voluptates sint possimus mollitia quam ut beatae veritatis rerum sed dolorem fugit accusantium optio, reprehenderit sunt ex atque doloremque?</td>
+                    </tr>
+                    <tr class="tr_even">
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor</td>
+                        <td colspan="2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet sequi ratione numquam eaque vitae accusantium quis perspiciatis cum autem optio dolore animi, voluptate delectus suscipit! Illum cumque illo ullam nesciunt!</td>
+                    </tr>
+                    <tr class="tr_odd">
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor</td>
+                        <td colspan="2">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus tenetur repudiandae, dolorum delectus amet rerum alias aperiam ex. Facere harum ipsum vero quae aspernatur, atque sed neque voluptate veritatis minus!</td>
+                    </tr>
+                </tbody>
+            </table>
+            <!-- paragraph 2 -->
+            <section>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus accusamus, commodi itaque deserunt doloremque <span class="yellowmark">eos error sed earum consequuntur exercitationem. Vero deleniti maiores autem impedit! Aut magnam excepturi nulla natus?Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis alias odit recusandae deserunt</span> aspernatur animi nostrum, fugit adipisci neque non eaque rem harum nemo amet modi! Expedita temporibus enim ea!Lorem
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ea, eveniet temporibus aperiam laboriosam suscipit, iure nobis vero ullam eligendi maxime nemo tempora totam earum laborum doloremque labore, facilis quam vel!
+                </p>
+            </section>
+        </main>
+        <footer>
         <!-- related searches -->
         <h4>Potrebbero interessarti</h4>
         <div id="related_searches">
             <img src="img/monitor.jpg" alt="monitor"><br>
             <img src="img/graph.jpg" alt="graph">
         </div>
-    </footer>
+        </footer>
+    </div>
 </body>
 </html>
